--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,8 +1,11 @@
 name: Build cloudflare-ddns Docker image (multi-arch)
 
 on:
-  push:
+  workflow_run:
+    workflows: [ test ]
     branches: main
+    types:
+      - completed
   pull_request:
 
 jobs:
