--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,7 +25,7 @@ jobs:
           go-version: '1.23.2'
 
       - name: Build
-        run: go test -race -covermode=atomic -coverprofile=coverage.out -coverpkg=./... ./...
+        run: make test
       #
       #go tool cover -html=coverage.out -o coverage.html
       - name: Upload dist
